# beanbeaver

./: .deepsource.toml  .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  flake.nix  pixi.toml  pyproject.toml
.github/workflows/: bb-tui.yml  cargo-deny.yml  coverage.yml  demo-run.yml  e2e-live-manual.yml  e2e-tests.yml  lint.yml  nix.yml  private-regression.yml  tests.yml
.wheel-test/_rust_matcher/: __init__.py
.wheel-test/beanbeaver-0.1.0.dist-info/: METADATA  RECORD  entry_points.txt
.wheel-test/beanbeaver-0.1.0.dist-info/sboms/: bb-tui.cyclonedx.json
application/: match_service.py
application/imports/: __init__.py  account_discovery.py  chequing.py  credit_card.py  csv_routing.py  service.py  shared.py
application/receipts/: __init__.py  approval.py  listing.py  match.py  review.py  scan.py
cli/: __init__.py  api.py  bean_extract_card_config.py  common.py  main.py  receipt.py
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/ocr-paddle/: Cargo.toml
crates/ocr-paddle/examples/: device_sim.rs
crates/ocr-paddle/scripts/: contour_cmp.py  manual_server_e2e.py  mask_cmp.py  paddle_e2e.py  scorecard.sh
crates/ocr-paddle/scripts/native_diag/: ablation.py  affine_fit.py  equiv.py  geomcmp.py  quantify_bias.py  whichfail.py
crates/ocr-paddle/src/: classify.rs  db_postprocess.rs  detect.rs  engine.rs  lib.rs  preprocess.rs  process.rs  recognize.rs  session.rs
crates/ocr-paddle/tests/: phase5_e2e.rs
crates/receipt-core/: Cargo.toml
crates/receipt-core/src/: detection_normalization.rs  lib.rs  ocr_transform.rs  process.rs  receipt_categories.rs  receipt_common.rs  receipt_fields.rs  receipt_formatter.rs  receipt_parse_helpers.rs  receipt_parser.rs  receipt_spatial.rs  receipt_staged_json.rs  receipt_text.rs  rules.rs  spatial.rs
crates/receipt-image/: Cargo.toml
crates/receipt-image/src/: lib.rs
demo/: accounts.beancount  expense.beancount  main.beancount  run_demo.sh  scan_receipt_to_json.sh
demo/receipt_groups/tnt_20251202/: 2025-12-02_t_t_supermarket_32_70.beancount
demo/records/: 2024.beancount
demo/records/2024/: carda_0101_0131.beancount  (+1 more)
docs/: ios_port.md  native_ocr.md  pixi_rust_migration_draft.md  receipt_json_pipeline.md  trust_zone.md
domain/: __init__.py  beancount_dates.py  card_transaction.py  cc_import.py  chequing_categorization.py  chequing_import.py  match.py  receipt.py
importers/: __init__.py  amex.py  base.py  bmo.py  canadian_tire_financial.py  chequing_common.py  cibc.py  eqbank.py  mbna.py  nationalbank.py  pcf.py  rogers.py  scotia.py  scotia_chequing.py
ledger_access/: __init__.py  _native.py  api.py  reader.py  writer.py
ledger_reader/: __init__.py  reader.py  writer.py
receipt/: README.md  __init__.py  _rust.py  date_utils.py  detection_normalization.py  formatter.py  image_constants.py  image_pipeline.py  item_categories.py  matcher.py  ocr_helpers.py  ocr_result_parser.py  staged_json.py
receipt/beancount_rendering/: __init__.py
receipt/ocr_extraction/: __init__.py
receipt/ocr_parser/: __init__.py  common.py  fields_parser.py  items_spatial_parser.py  items_text_parser.py
receipt/receipt_structuring/: __init__.py
receipt/rules/: default_item_classifier.toml
rules/: default_item_classifier.toml  default_merchant_rules.toml
runtime/: README.md  __init__.py  chequing_rules.py  item_category_rules.py  logging.py  merchant_families.py  merchant_rules.py  ocr_models.py  paths.py  receipt_pipeline.py  receipt_server.py  receipt_storage.py  rule_engine.py  tui_config.py
scripts/: gen_tilt_fixtures.py  lint.sh
src/: detection_normalization.rs  lib.rs  main.rs  match_domain.rs  match_service.rs  matcher.rs  ocr_line_grouping.rs  python_detection_normalization.rs  python_image_pipeline.rs  python_ledger_access.rs  python_match_service.rs  python_native_ocr.rs  python_ocr_line_grouping.rs  python_receipt_categories.rs  python_receipt_common.rs  python_receipt_fields.rs  python_receipt_formatter.rs  python_receipt_parse_helpers.rs  python_receipt_parser.rs  python_receipt_process.rs  python_receipt_spatial.rs  python_receipt_staged_json.rs  python_receipt_text.rs  python_spatial.rs  receipt_categories.rs  receipt_common.rs  receipt_fields.rs  receipt_formatter.rs  receipt_parse_helpers.rs  receipt_parser.rs  receipt_spatial.rs  receipt_staged_json.rs  receipt_text.rs  spatial.rs  tui.rs
src/tui/: app.rs  backend.rs  event_loop.rs  mod.rs  model.rs  process_util.rs  render.rs  runtime.rs  state.rs
tests/: README.md  conftest.py  test_application_match_service.py  test_approval_tender_patches.py  test_card_transaction.py  test_cc_category_review.py  test_chequing_decisions.py  test_chequing_rules.py  test_cli_api.py  test_cli_import_refactor.py  test_cli_receipt_editors.py  test_csv_routing.py  test_detection_normalization.py  test_domain_cli_pure_helpers.py  test_e2e_receipts.py  test_image_pipeline.py  test_item_categories.py  test_ledger_access_api.py  test_ledger_access_public_api_usage.py  test_ledger_reader.py  test_ledger_reader_exports.py  test_ledger_writer.py  test_match_abort_rollback.py  test_match_preflight.py  test_matcher.py  test_nationalbank_importer.py  test_ocr_backend.py  test_ocr_helpers.py  test_ocr_models.py  test_ocr_result_parser.py  test_receipt_category_resolution.py  test_receipt_core_parity.py  test_receipt_fields_parser.py  test_receipt_formatter.py  test_receipt_item_ids.py  test_receipt_pipeline.py  test_receipt_server_response.py  test_receipt_spatial_parser.py  test_receipt_spatial_parser_regressions.py  test_receipt_staged_json.py  (+8 more)
tests/receipts_e2e/: costco_20260218_redact.expected.json  costco_20260218_redact.ocr.json  costco_20260218_redact_tilt7.expected.json  loblaw_20260211_censor.expected.json  loblaw_20260211_censor.ocr.json  tnt_20251202_censor.expected.json  tnt_20251202_censor.ocr.json  tnt_20260217_redact.expected.json  tnt_20260217_redact.ocr.json  tnt_20260316_food_section.expected.json  tnt_20260316_food_section.ocr.json  walmart_20260218_redact.expected.json  walmart_20260218_redact.ocr.json
util/: __init__.py  common_util.py
(+10 files in other folders)
