[package]
name = "bb-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rust_matcher"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bb-tui"
path = "src/main.rs"

[package.metadata.maturin]
name = "beanbeaver._rust_matcher"

[dependencies]
crossterm = "0.28"
pyo3 = { version = "0.28", features = ["extension-module"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
